# arcaflow-plugin-rusty-comms

./: .act.yaml  .dockerignore  .gitignore  Dockerfile  README.md  comprehensive-rusty-comms-arcaflow-testing.yaml  config.yaml  docker-compose.yaml  functionality-supported-rusty-comms-arcaflow-testing.yaml  pyproject.toml  quick-rusty-comms-arcaflow-testing.yaml  workflow.yaml
.github/workflows/: build.yaml  workflow.yaml
arcaflow_plugin_rusty_comms/: rusty_comms_plugin.py  rusty_comms_schema.py
inputs/: example.yaml
tests/: test_arcaflow_plugin_rusty_comms.py
utils/: run_benchmarks.sh
utils/python/: parse_arcaflow_output.py  run_comprehensive.py
